--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TP_Projet"
         tools:targetApi="31">
         <activity
+            android:name=".interface2"
+            android:exported="false" />
+        <activity
             android:name=".interface4"
             android:exported="false" />
         <activity
